fixing tag name

--- a/style.css
+++ b/style.css
@@ -514,7 +514,7 @@ footer .right-side span {
     margin-block: 2rem;
   }
 
-  footer .left-side .logo-icons .icons img {
+  footer .left-side .logo-icons .icons svg {
     margin-inline-start: 0.5rem;
   }
 
