--- a/style.css
+++ b/style.css
@@ -406,6 +406,11 @@ footer .right-side span {
   display: block;
 }
 
+     .attribution {
+      
+        padding-block-start: 2rem;
+      }
+
 /* @@@@@@@@@@@@@@@@@@@@@ Media @@@@@@@@@@@@@@@@@@@@@ */
 @media (max-width: 767px) {
   header .logo {
